Fix overlapping layout and responsive issues

--- a/sec1.css
+++ b/sec1.css
@@ -164,18 +164,29 @@ h1{
         margin-top: 100px;
     }
     .sec-1-2-1{
-    margin-top:20px;
+    margin-top:40px;
     font-size: 15px;
-  }
-  .menu-bar{
-    margin-top:10px;
+    }
+    .menu-bar{
+    margin-top:0px;
     font-size: 25px;
-  }
-  p{
-    font-size: 14px;
+    }
+    h1{
+        margin-top: 60px;
+        font-size:25px;
+    }
+    .btns{
+        padding:10px;
+        flex-direction: column;
+        align-items: center;
+        font-size: 10px;
+    }
+
+    p{
+    font-size: 10px;
     text-align: center;
     width: 80%;
-  }
+    }
     .btns>:nth-child(1){
         padding: 20px;
         font-size: 12px;
